[project]
name = "mapleteller"
version = "0.1.0"
description = "Parse BMO and RBC PDF statements, generate CSV to be imported into Actual Budget or Firefly"
authors = [{ name = "Chaiwat S", email = "iwatth@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pdfplumber (>=0.11.7,<0.12.0)", "tabulate (>=0.9.0,<0.10.0)"]

[project.scripts]
mapleteller = "mapleteller:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
