[project]
name = "mapleteller"
version = "0.1.0"
description = "Parse BMO and RBC PDF statements, generate CSV to be imported into Actual Budget or Firefly"
authors = [{ name = "Chaiwat S", email = "iwatth@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pdfplumber (>=0.11.7,<0.12.0)",
    "tabulate (>=0.9.0,<0.10.0)",
]

[project.scripts]
mapleteller = "mapleteller:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
